# grizzly-knights

./: .gitignore  01 - Before Anyone Noticed.txt  02 - The System.txt  03 - What Gets Said.txt  04 - Parker Luck.txt  05 - The Argument That Doesn't End.txt  06 - Spider Sanity Intervention.txt  07 - Late Night, Long Shadows.txt  08 - Three Men and Their Cracks.txt  CLAUDE.md  NANO_BANANA_PROMPTS.md  README.md  config.yaml  cook_batch.py  cook_ep01_genesis.py  cook_ep01_pressure_proof_v3.py  cook_swarm_proof.py  cook_themed_openers.py  export_episodes.py  export_episodes_agency.py  export_scripts.py  gui.py  requirements.txt  run.py  setup_voices.py  smoke_test_full.py
.obsidian/: community-plugins.json  (+1 more)
holograph/: .gitignore  README.md  pyproject.toml
holograph/.claude_hooks/: memory_consolidate.py  memory_recall.py
holograph/bench/: stress_test.py
holograph/docs/: HoloGraph_Technical_Report_rev7.docx
holograph/examples/: demo_agent.py  demo_playground.py  demo_psp.py
holograph/rust-kernel/: Cargo.toml  README.md  pyproject.toml
holograph/rust-kernel/.cargo/: config.toml
holograph/rust-kernel/src/: lib.rs
holograph/src/holograph/: __init__.py  cli.py  runtime.py
holograph/src/holograph/beliefs/: __init__.py  store.py
holograph/src/holograph/continuity/: __init__.py  crypto.py  store.py
holograph/src/holograph/feedback/: __init__.py  loop.py
holograph/src/holograph/graph/: __init__.py  substrate.py
holograph/src/holograph/hdc/: __init__.py  _native_loader.py  encoder.py  kernel.py  memory.py
holograph/src/holograph/hierarchy/: __init__.py  builder.py  router.py
holograph/src/holograph/reader/: __init__.py  addressing.py  composer.py  gnn.py  planner.py  reader.py
holograph/tests/: conftest.py  test_adversarial.py  test_beliefs.py  test_charge.py  test_gnn_composer.py  test_graph_substrate.py  test_hdc_kernels.py  test_hdc_memory.py  test_hierarchy.py  test_provenance_class.py  test_regression.py  test_smoke.py  test_values.py  test_writer_reader_loop.py
(+1217 files in other folders)
