[package]
name = "holograph_hdc_rs"
version = "0.1.0"
edition = "2021"
authors = ["Grizz & Claude"]
description = "Rust accelerator for HoloGraph HDC kernels (PyO3 bindings)."
license = "MIT"

[lib]
name = "holograph_hdc_rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Pinned exact versions — run `cargo update` to refresh, then re-pin.
pyo3 = { version = "=0.22.6", features = ["extension-module", "abi3-py310"] }
numpy = "=0.22.1"
ndarray = "=0.16.1"
rayon = "=1.12.0"
rand = "=0.8.6"
rand_chacha = "=0.3.1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
