[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "holograph_hdc_rs"
version = "0.1.0"
description = "Rust accelerator for HoloGraph HDC kernels"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "holograph._native"
python-source = "../src"
